--- a/templates/tasks/create_task.html
+++ b/templates/tasks/create_task.html
@@ -21,33 +21,11 @@
                 <h2>Choose Assignees</h2>
                 <br>
                 <div class="col-md-4 mb-3">
-                    <label class="sr-only">Assignee 1</label>
-                    <select name="assignee_1" class="form-control">
-                    <option selected="true" disabled="disabled">Assignee 1</option>
-                        {% for key, value in assignee_choices.items %}
-                            <option value="{{ key }}">{{ value }}
-                            </option>
-                    {% endfor %}
-                    </select>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <label class="sr-only">Assignee 2</label>
-                    <select name="assignee_2" class="form-control">
-                    <option selected="true" disabled="disabled">Assignee 2</option>
-                        {% for key, value in assignee_choices.items %}
-                            <option value="{{ key }}">{{ value }}
-                            </option>
-                    {% endfor %}
-                    </select>
-                </div>
-                <div class="col-md-4 mb-3">
-                    <label class="sr-only">Assignee 3</label>
-                    <select name="assignee_3" class="form-control">
-                    <option selected="true" disabled="disabled">Assignee 3</option>
-                        {% for key, value in assignee_choices.items %}
-                            <option value="{{ key }}">{{ value }}
-                            </option>
-                    {% endfor %}
+                    <label for="assignees"><h2>Assignees:</h2></label>
+                    <select name="assignees" multiple required>
+                        {% for user in users %}
+                            <option value="{{ user.id }}">{{ user.username }}</option>
+                        {% endfor %}
                     </select>
                 </div>
                 <div>
